src/__tests__/component/__snapshots__/LiveError.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveError should not render with no error 1`] = `null`;

exports[`LiveError should render cleaned up error message for error 1`] = `
<div
  class="live-edit-error"
>
  SyntaxError: Unexpected token (1:3)
1 : re turn &lt;div /&gt;
       ^
</div>
`;
